kubernetes/demo-app-tls/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: demoapp
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: demoapp.<myip>.nip.io
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: demoapp
              port:
                number: 8080
  tls:
  - hosts:
    - demoapp.<myip>.nip.io
    secretName: demoapp-tls
